# trabalho2-CG

./: .gitignore  CMakeLists.txt  algebra.c  camera.h  main.c  makefile  objeto.c  piramide.txt  readme.txt  tela.c
include/: algebra.h  camera.h  objeto.h  tela.h
src/: algebra.c  camera.c  main.c  objeto.c
